# ins_nav

./: .gitignore  .travis.yml  Untitled.ipynb  notes.md  pyproject.toml  readme.md  readme.rst  requirements.txt  setup.py
.github/workflows/: python.yaml
ahrs/: AHRS.ipynb  ahrs.py  compass.py
archive/: ahrs.py
calibration/: TiltCompensatedCompass.ipynb  ahrs.ipynb  calibration.ipynb  compass.py  data-still.bag  data-still.pickle.bag  data.bag  data.pickle.bag  grab.py  imu-cal-new.ipynb  lidar.ipynb  print-data.py
cpp/: CMakeLists.txt
cpp/dev/module/: CMakeLists.txt  matrix.cpp
cpp/examples/: CMakeLists.txt  main.cpp
cpp/gtests/: CMakeLists.txt  main-gtest.cpp
cpp/src/: nav.hpp  units.hpp  wgs84.hpp
cpp/src/navigation/: common.hpp  ins_nav.hpp  nav.hpp  nav_frame.hpp  units.hpp  wgs84.hpp
dev/: test.py
dev/camera/: cam.py
dev/cpp/module/: hello.cppm  matrix.hpp
dev/cpp/phd-lib/: CMakeLists.txt
dev/cpp/phd-lib/include/: convertDataTypeLib.h  fileio.h  kalman.h  keyboardLib.h  matrix.h  portOpsLib.h  quaternion.h  rk4.h  rotation.h  sendRecMsgLib.h  serial.h  signalLib.h  sm.h  smLib.h  socket.h  textFileLib.h
dev/cpp/phd-lib/src/: CMakeLists.txt  cArray.cpp  cBaseMath.cpp  cMLError.cpp  cMathlib.h  cMatrix.cpp  cQuaternion.cpp  cRand.cpp  cRand.h  cRk4.cpp  cRk4.h  cVector.cpp
dev/future/: ekf.py
dev/imufilter-matlab/: imufilter-test-2.ipynb  imufilter-test.ipynb  readme.md
dev/imufilter-matlab/filters/: imufilter.py  madgwick.py
dev/jupyter/: ins.ipynb  vo.ipynb
dev/path-data/: .gitattributes  .gitignore  grab-data.py  play-bag.py
docs/: Untitled.ipynb  basic_errors.ipynb  filtering.ipynb  nav-kf.ipynb  pandas-sns.ipynb
docs/jupyter/: Mag_Gyro_Calibration.ipynb  ahrs.ipynb  calibrate.ipynb  data-2022-07-10.pkl  data-mag-2022-07-10.pkl  grab_data.py  imu-comparison.ipynb  madgwick.ipynb  mahony.ipynb
docs/jupyter/imuFilter/: imuFilter.ipynb
gecko/: pickle-save.py  process.py
grabdata/: compass.py  data.ipynb  data.json  grab.py  print-data.py
ins/: Inertial-Navigation-System.ipynb
ins_nav/: AHRS.py  EKF.py  INS.py  Navigation.py  __init__.py  ahrs.py  ahrs2.py  compass.py  errors.py  nav_frames.py  storage.py  transforms.py  utils.py  wgs84.py
ins_nav/calibration/: __init__.py  magplot.py
ins_nav/filters/: __init__.py  mahony.py
misc/: LSM303.py  example.py  readme.rst
python/: pyproject.toml  readme.md
python/dev/i2c/: cam.py  grab-data.py
python/dev/imufilter-matlab/: accel-gyro-calibrate.ipynb  calibration-magnetometer-alt.ipynb  helper.py  imufilter-test-2.ipynb  temp.yaml
python/dev/imufilter-matlab/filters/: __init__.py  madgwick.py  mahony.py
python/dev/path-data/: play-bag.py  threaded_camera.py
python/ins_nav/: nav_frames.py  utils.py  wgs84.py
python/ins_nav/calibration/: calaccel.py  calmag.py
python/ins_nav/filters/: ahrs.py  madgwick.py
python/tests/: test_ahrs.py  test_compass.py  test_transforms.py
reorg/ahrs/: AHRS.ipynb  Untitled.ipynb
reorg/gecko/: camera_test.py  imu.py
reorg/ins/: Inertial-Navigation-System.ipynb  ins-text.ipynb
reorg/misc/: ahrs.py  imu.py
tests/: test.py  test_ahrs.py  test_compass.py  test_transforms.py
