[tool.poetry]
name = "ins_nav"
version = "0.6.0"
description = "A library to do inertial navigation"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/ins_nav/"
repository = 'https://github.com/MomsFriendlyRobotCompany/ins_nav'
# documentation = "http://..."
keywords = ['library', 'robotics', 'robot', 'ins', 'inertial', 'navigation', 'ahrs', 'imu']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
squaternion = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
